dpdk (16.04-0ubuntu2~dev1) UNRELEASED; urgency=medium

  * Adding support for ARM64:
    - debian/control: adding arm64 to the supported architecture list
    - debian/rules: supporting dpdk config and machine for arm64
    - d/p/ubuntu-fix-xenvirt-support-dynamic-page-size.patch: fix build
      failure on arm64

 -- Ricardo Salveti de Araujo <ricardo.salveti@linaro.org>  Mon, 18 Apr 2016 00:09:22 -0300

dpdk (16.04-0ubuntu1~dev1) UNRELEASED; urgency=medium

  * Merge with upstream DPDK 16.04 release
  * droping patches/backports that are already upstream in DPDK 16.04
    - d/p/ubuntu-fix-doc-installpath.patch
    - d/p/ubuntu-fix-testpmd-without-xen.patch
    - d/p/ubuntu-fix-lpm-use-after-free-and-leak.patch
    - d/p/ubuntu-backport-[01-32,34-35] backports for stability
    - d/p/ubuntu-backport-[36-37] but keep doc and example changes in d/*
  * droping patches for soname / linking fixups.
    - Upstream now goes with proper soname/abi/api handling per sublib plus a
      linker script.
    - dropped d/p/ubuntu-combined-shared-lib-abiversion.patch
    - dropped d/p/ubuntu-fix-library-linkage.patch
  * keeping patches:
    - d/p/ubuntu-backport-38-* fix for memory leak
      this now applies as is, so changed from a modified backport to match the
      post 16.04 upstream commit now.
    - d/p/ubuntu-backport-33-vhost-user-add-error-handling-for-fd-1023.patch
    - doc and example changes that were related to d/p/ubuntu-backport-[36-37]
    - d/p/ubuntu-fix-vhost-user-socket-permission.patch adapted for dpdk-16.04:
      In the new build system with sublibs the exposed function needs to be
      listed in lib/librte_eal/linuxapp/eal/rte_eal_version.map
  * adding patches
    - d/p/ubuntu-backport-39-lpm-fix-freeing-in-compatibility-mode.patch
      This was formerly part of a combined patch we dropped becuase the
      majority is upstream (d/p/ubuntu-fix-lpm-use-after-free-and-leak.patch).