@@ -1,13 +1,15 @@
 #
 # <bus>		Currently only "pci" is supported
 # <id>		Device ID on the specified bus
-# <driver>	Driver to bind against (vfio-pci or uio_pci_generic)
+# <driver>	Driver to bind against (vfio-pci, uio_pci_generic or igb_uio)
 #
-# Be aware that the two dpdk compatible drivers uio_pci_generic and vfio-pci are
-# part of linux-image-extra-<VERSION> package.
+# Be aware that the vfio-pci and uio_pci_generic drivers are part of
+# linux-image-extra-<VERSION> package, in case you run into missing module
+# issues. For igb_uio, please install the dpdk-igb-uio-dkms package.
 # This package is not always installed by default - for example in cloud-images.
 # So please install it in case you run into missing module issues.
 #
 # <bus>	<id>		<driver>
 # pci	0000:04:00.0	vfio-pci
 # pci	0000:04:00.1	uio_pci_generic
+# pci	0000:06:00.0	igb_uio
