@@ -3,6 +3,8 @@
 # output every command that modifies files on the build system.
 #export DH_VERBOSE = 1
 
+VERSION := $(shell dpkg-parsechangelog | sed -nr '/^Version:/s/Version: (.*:)?(.*)-(.*)/\2/p')
+
 # see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
@@ -152,6 +154,11 @@ binary-arch:
 	  mkdir -p debian/$${LNV}/$(LIBDIR); \
 	  mv $${lib} debian/$${LNV}/$(LIBDIR); \
 	done
+	# Package: dpdk-igb-uio-dkms
+	mkdir -p debian/dpdk-igb-uio-dkms/usr/src/dpdk-igb-uio-$(VERSION)
+	cp lib/librte_eal/linuxapp/igb_uio/* \
+		debian/dpdk-igb-uio-dkms/usr/src/dpdk-igb-uio-$(VERSION)
+	dh_dkms -V $(VERSION)
 	dh_python2
 	dh_perl
 	dh_link
